# youtube-ideology-analysis

./: .gitignore  IMPROVED_LABELING.md  README.md  add_video_dates.py  analyze_sample.py  collect_all_samples.py  collect_sample.py  demo_improved_labeling.py  example_usage.py  full_simulation.py  generate_improved_coding.py  interpret_results.md  pyproject.toml  simulate_coding.py
example_outputs/: README.md
example_outputs/advanced_reports/: engagement_metrics.csv  loo_analysis.csv  robustness_report.txt  summary_14days.csv  tests_14days.csv  vp_by_engagement.csv
tests/: test_advanced_report.py  test_api.py  test_coding.py  test_improved_coding.py  test_integration.py  test_report.py  test_storage.py
yt_pilot/: __init__.py  abm_models.py  advanced_report.py  analysis.py  api.py  cli.py  coding.py  collectors.py  improved_coding.py  models.py  report.py  storage.py
