[project]
name = "yt-pilot"
version = "0.2.0"
description = "YouTube comment collection and analysis library for research"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.0.0",
]
analysis = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
]
abm = [
    "mesa>=1.0.0",
    "networkx>=2.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]